fixe: sales error fixed
