# ecommerce/src/sales/routes/salesOrders.js
@@ -1,6 +1,7 @@
 const router = require('express').Router();
 const salesOrderController = require('../controllers/salesOrderController');
-const {salesOrderIdValidation, customerValidation, orderLineItemsValidation, totalPriceValidation} = require('../middlewares/salesOrderValidation');
+const {salesOrderIdValidation, salesOrderStateValidation, customerValidation,
+  orderLineItemsValidation, totalPriceValidation} = require('../middlewares/salesOrderValidation');
 const {checkValidationPassed} = require('../../middlewares/chackValidationPassed');
 
 router.post('/', [customerValidation, orderLineItemsValidation, totalPriceValidation],checkValidationPassed, salesOrderController.createSalesOrder);
@@ -8,6 +9,7 @@ router.get('/', salesOrderController.getAllSalesOrders);
 router.get('/:salesOrderId', salesOrderIdValidation, checkValidationPassed, salesOrderController.getSalesOrderById);
 router.put('/:salesOrderId', [salesOrderIdValidation, customerValidation, orderLineItemsValidation, totalPriceValidation],
   checkValidationPassed, salesOrderController.updateSalesOrder);
+router.patch('/:salesOrderId', [salesOrderIdValidation, salesOrderStateValidation], checkValidationPassed, salesOrderController.partiallyUpdateSalesOrder);
 router.delete('/:salesOrderId', salesOrderIdValidation, checkValidationPassed, salesOrderController.deleteSalesOrder);
 
 module.exports = router;
